# FinAgent-Quant

./: README.md
cpp_data_provider/: CMakeLists.txt
cpp_data_provider/src/: main.cpp
proto/: fin_agent.proto
python_agent/: .env  Dockerfile  agent_brain.py  docker-compose.yml  main.py  pyproject.toml  quant_memory.py  skill_registry.py  test_router.py  ui.py
python_agent/core/: fin_agent_pb2.py  fin_agent_pb2_grpc.py
python_agent/quant_memory_db/: chroma.sqlite3
